--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/open-sans": "^5.0.25",
     "@fontsource-variable/spline-sans": "^5.0.18",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
